2010-10-19  Chong Yidong  <cyd@stupidchicken.com>

	* cus-face.el (custom-theme-set-faces): Revert 2010-10-18 change.
	Don't mark as safe.

	* custom.el (custom-theme-set-variables): Likewise.
	(load-theme): Add custom-theme-set-faces and
	custom-theme-set-variables to safe-functions while loading.
	(custom-enabled-themes): Mark as risky.

2010-10-18  Julien Danjou  <julien@danjou.info>

	* bindings.el: Remove end dashes in default mode-line-format.

2010-10-19  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el (global-map): Bind C-d to delete-char and deletechar
	to delete-forward-char.

	* simple.el (normal-erase-is-backspace-mode): Remap delete to
	deletechar, and hence delete-forward-char.

2010-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* repeat.el (repeat): Use read-key (bug#6256).

2010-10-19  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/unsafep.el: Don't mark functions that display
	messages as safe.  Suggested by Johan Bockgård.

2010-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--replace): Move point where it belongs
	when there's a common suffix (bug#7215).

2010-10-19  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Add category '|' (word breakable)
	to fullwidth characters.

2010-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Use "e0" in
	order to make stat results a float.  Patch by Andreas Schwab
	<schwab@linux-m68k.org>.

2010-10-18  Julien Danjou  <julien@danjou.info>

	* avoid.el (mouse-avoidance-ignore-p): Ignore mouse when it is
	hidden by `make-pointer-invisible'.

2010-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (locate-file-completion-table): Strip non-matching elements
	before checking length of list (bug#7238).

2010-10-18  Chong Yidong  <cyd@stupidchicken.com>

	* custom.el (custom-theme-set-variables): Mark as a safe function.